--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,73 +39,15 @@ body{
     border: 1px solid black;
 }
 /* ======================================================================== */
-html, body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .pic-ctn {
-    width: 100vw;
-    height: 200px;
-  }
-  
-  @keyframes display {
-    0% {
-      transform: translateX(200px);
-      opacity: 0;
-    }
-    10% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-    20% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-    30% {
-      transform: translateX(-200px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(-200px);
-      opacity: 0;
-    }
-  }
-  
-  .pic-ctn {
-    position: absolute;
-    height: 350px;
-    margin-top: 5vh;
-    right: 0px;
-  }
-  .carusel-section{
-    height: 400px;
-  }
-  
-  .pic-ctn > img {
-    position: absolute;
-    top: 0;
-    
-    left: calc(50% - 100px);
-    opacity: 0;
-    animation: display 10s infinite;
-  }
-  
-  img:nth-child(2) {
-    animation-delay: 2s;
-  }
-  img:nth-child(3) {
-    animation-delay: 4s;
-  }
-  img:nth-child(4) {
-    animation-delay: 6s;
-  }
-  img:nth-child(5) {
-    animation-delay: 8s;
-  }
+.pic-ctn{
+    padding: 40px;
+}
 
   /* ===================================================== */
 .ad{
-    height: 405px;
-    padding: 10px;
+    
+}
+.video-div{
+    height: 425px;
+   
 }
