--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,10 +48,10 @@ body{
 }
   /* ===================================================== */
   .ad {
-    padding: 30px;
+    padding: 20px;
 }
 .video-div{
-    height: 510px;
+    height: 5e0px;
     
    
 }
